fix: adjust padding, button size, and navigation link spacing; simplify contact section title

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 /*reset global*/
 *{
-    padding: 0%;
+    padding: 0;
     margin: 0;
 }
 
@@ -88,7 +88,7 @@ header h1{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 6vh;
+    font-size: 50px;
 }
 
 /*estilização dos botões*/
@@ -99,8 +99,8 @@ header h1{
     justify-content: center;    /*faz os itens dentro do botão ficarem alinhado*/
     border-style: hidden;
     border-radius: 100%;
-    width: 2rem;
-    height: 2rem;
+    width: 50px;
+    height: 50px;
     padding: 2rem;
     transition: 0.5s;           /*transição da animação ao clicar*/
 }
@@ -119,7 +119,7 @@ body.dark .btn1:hover{
 /*estilização dos links nav*/
 nav{
     display: flex;
-    gap: 1rem;
+    gap: 2rem;
 }
 nav a{
     text-decoration: none; /*remove sublinhado*/
@@ -127,10 +127,10 @@ nav a{
     align-items: center;
     color: white;
     font-weight: bold;
-    transition: font-size 0.5s ease;
+    transition: transform 0.5s ease;
 }
 nav a:hover{
-    font-size: 1.5rem;
+    transform: scale(1.5);
 }
 
 /*estilização do titulo da seção*/
@@ -141,30 +141,6 @@ section h1{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
-section h1 span{
-    display: inline-block;
-}
-section h1:hover span{
-    animation: jumpLetter 0.4s ease;
-}
-/*configura o efeito para cada span*/
-section h1 span:nth-child(1){ animation-delay: 0s; }
-section h1 span:nth-child(2){ animation-delay: 0.05s; }
-section h1 span:nth-child(3){ animation-delay: 0.1s; }
-section h1 span:nth-child(4){ animation-delay: 0.15s; }
-section h1 span:nth-child(5){ animation-delay: 0.2s; }
-section h1 span:nth-child(6){ animation-delay: 0.25s; }
-section h1 span:nth-child(7){ animation-delay: 0.3s; }
-section h1 span:nth-child(8){ animation-delay: 0.35s; }
-section h1 span:nth-child(9){ animation-delay: 0.4s; }
-section h1 span:nth-child(10){ animation-delay: 0.45s; }
-section h1 span:nth-child(11){ animation-delay: 0.5s; }
-section h1 span:nth-child(12){ animation-delay: 0.55s; }
-section h1 span:nth-child(13){ animation-delay: 0.6s; }
-section h1 span:nth-child(14){ animation-delay: 0.65s; }
-section h1 span:nth-child(15){ animation-delay: 0.7s; }
-
-
 main p{
     display: flex;
     margin-left: 20px;
